Edit Family Member added.

--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Content/custom-styles.css
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Content/custom-styles.css
@@ -175,7 +175,7 @@ label {font-weight:400; font-size:14px; margin-bottom:10px; margin-top:3px; widt
     border-radius: 2px;
     font-size: 13px;
     background-color: white;
-    background-image: url(../img/search.png);
+    background-image: url(img/search.png);
     background-position: 125px 8px;
     background-repeat: no-repeat;
     padding: 7px 10px 7px 10px;
