--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/ResetPassword.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model Chinmaya.Registration.UI.Models.ResetPasswordViewModel
+﻿
 @{
     ViewBag.Title = "Reset password";
 }
@@ -7,7 +7,7 @@
 
 @using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
-    @Html.AntiForgeryToken()
+    @*@Html.AntiForgeryToken()
     <h4>Reset your password.</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
@@ -29,7 +29,7 @@
         <div class="col-md-10">
             @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
         </div>
-    </div>
+    </div>*@
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Reset" />
