--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_LayoutPageOpen.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_LayoutPageOpen.cshtml
@@ -20,8 +20,8 @@
     </div>
     <div class="copyright">New to Chinmaya Mission? Please register for programs/events @Html.ActionLink("here", "Registration", "Account", new { area = "" }, new { @style = "color:red;" }).</div>
 
+    @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/bootstrap")
-    <script type="text/javascript">
-    </script>
+    @RenderSection("Scripts", false)
 </body>
 </html>
