--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/AccountDetails.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/AccountDetails.cshtml
@@ -1,32 +1,25 @@
 ﻿@model Chinmaya.Registration.Models.AccountDetails
 @using Chinmaya.Registration.Models
+
 @{
 	ViewBag.Title = "AccountDetails";
-	Layout = "";
+	Layout = "~/Views/Shared/_LayoutPageRegister.cshtml";
 }
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="description" content="">
-	<meta name="author" content="">
-	<title>Welcome to Chinmaya Mission</title>
+@section Styles {
+    <style>
+        .column {
+            flex: 50%;
+        }
 
-	@Styles.Render("~/Content/css")
-	<style>
-		.column {
-			flex: 50%;
-		}
-		.requiredA:after {
-			content: " *";
-			font-weight: bold;
-			color: red;
-		}
-		
-	</style>
+        .requiredA:after {
+            content: " *";
+            font-weight: bold;
+            color: red;
+        }
+    </style>
+}
+	
 	@{
 		List<SelectListItem> listItems = new List<SelectListItem>();
 		listItems.Add(new SelectListItem
@@ -41,18 +34,7 @@
 		});
 
 	}
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/jqueryval")
-</head>
 
-<body class="theme_bg">
-	<header class="regi-header">
-
-		<div class="container-fluid">
-			<a href="#"><img alt="mainlogo" src="~/Content/img/dashboard-logo.png"></a>
-			<div style="width:68px; float:right; margin:0px; margin-top:-1px;"><img style="border-radius:50%; border:2px solid #c7b299;" src="~/Content/img/header-thumbnail.png"></div>
-		</div>
-	</header>
 	@using (Html.BeginForm("AccountDetails", "Account", FormMethod.Post))
 
 	{
@@ -160,9 +142,6 @@
 			</div>
 		</div>
 	}
-
-</body>
-</html>
 
 @if(ViewBag.Toast != null)
 {
