Add layout page to login view

--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_LayoutPageOpen.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_LayoutPageOpen.cshtml
@@ -13,7 +13,7 @@
     </div>
     <div class="login-box">
         <div class="row" id="login">
-            <div>
+            <div class="col-md-12">
                 @RenderBody()
             </div>
         </div>
