--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/PersonalDetails.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/PersonalDetails.cshtml
@@ -4,118 +4,133 @@
 	ViewBag.Title = "PersonalDetails";
 	Layout = "~/Views/Shared/_LayoutPageRegister.cshtml";
 }
-
+<link href="~/Content/bootstrap-datepicker.standalone.min.css" rel="stylesheet" />
+<script src="~/Scripts/bootstrap-datepicker.min.js"></script>
 @section Styles {
 
-<style>
-    .requiredA:after {
-        content: " *";
-        font-weight: bold;
-        color: red;
-    }
-</style>    
-    
+	<style>
+		.requiredA:after {
+			content: " *";
+			font-weight: bold;
+			color: red;
+		}
+	</style>
+
 }
-	@using (Html.BeginForm("PersonalDetails", "Account", FormMethod.Post))
+@using (Html.BeginForm("PersonalDetails", "Account", FormMethod.Post))
 
-	{
+{
 
-		@Html.AntiForgeryToken()
-		<div class="container">
-			<div class="row">
-				<div class="col-md-8 offset-md-2">
-					<div class="regi-process-bar">
-						<div class="row">
-							<div class="col-md-5"><div class="regi-heading">Program/Event Registration</div></div>
-							<div class="col-md-7">
-								<div class="row bs-wizard">
-									<div class="col-md-4 bs-wizard-step active">
-										<div class="progress"><div class="progress-bar"></div></div>
-										<a class="bs-wizard-dot" href="#">1</a>
-										<div class="text-center bs-wizard-stepnum marl-55">Personal</div>
-									</div>
+	@Html.AntiForgeryToken()
+	<div class="container">
+		<div class="row">
+			<div class="col-md-8 offset-md-2">
+				<div class="regi-process-bar">
+					<div class="row">
+						<div class="col-md-5"><div class="regi-heading">Program/Event Registration</div></div>
+						<div class="col-md-7">
+							<div class="row bs-wizard">
+								<div class="col-md-4 bs-wizard-step active">
+									<div class="progress"><div class="progress-bar"></div></div>
+									<a class="bs-wizard-dot" href="#">1</a>
+									<div class="text-center bs-wizard-stepnum marl-55">Personal</div>
+								</div>
 
-									<div class="col-md-4 bs-wizard-step disabled">
+								<div class="col-md-4 bs-wizard-step disabled">
 
-										<div class="progress"><div class="progress-bar"></div></div>
-										<a class="bs-wizard-dot" href="#">2</a>
-										<div class="text-center bs-wizard-stepnum">Contact</div>
-									</div>
+									<div class="progress"><div class="progress-bar"></div></div>
+									<a class="bs-wizard-dot" href="#">2</a>
+									<div class="text-center bs-wizard-stepnum">Contact</div>
+								</div>
 
-									<div class="col-md-4 bs-wizard-step disabled">
+								<div class="col-md-4 bs-wizard-step disabled">
 
-										<div class="progress"><div class="progress-bar"></div></div>
-										<a class="bs-wizard-dot" href="#">3</a>
-										<div class="text-center bs-wizard-stepnum marr-60">Account</div>
-									</div>
+									<div class="progress"><div class="progress-bar"></div></div>
+									<a class="bs-wizard-dot" href="#">3</a>
+									<div class="text-center bs-wizard-stepnum marr-60">Account</div>
 								</div>
 							</div>
 						</div>
 					</div>
-					@Html.ValidationSummary(true)
-					<div class="regi-main-1">
-						<p>
-							<span class="red-txt">*</span> denotes a required field
-						</p>
-						<div class="row">
-							<div class="col-md-6">
-								@*<label>First Name <span class="red-txt">*</span></label>*@
-								@Html.LabelFor(m => m.FirstName, new { @class = "requiredA" })
-								@Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })
-								@Html.ValidationMessageFor(m => m.FirstName, "", new { @class = "text-danger" })
-							</div>
-							<div class="col-md-6">
-								@*<label>Last Name <span class="red-txt">*</span></label>*@
-								@*<input id="LastName" class="form-control" type="password" placeholder="">*@
-								@Html.LabelFor(m => m.LastName, new { @class = "requiredA" })
-								@Html.TextBoxFor(m => m.LastName, new { @class = "form-control" })
-								@Html.ValidationMessageFor(m => m.LastName, "", new { @class = "text-danger" })
-							</div>
+				</div>
+				@Html.ValidationSummary(true)
+				<div class="regi-main-1">
+					<p>
+						<span class="red-txt">*</span> denotes a required field
+					</p>
+					<div class="row">
+						<div class="col-md-6">
+							@*<label>First Name <span class="red-txt">*</span></label>*@
+							@Html.LabelFor(m => m.FirstName, new { @class = "requiredA" })
+							@Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })
+							@Html.ValidationMessageFor(m => m.FirstName, "", new { @class = "text-danger" })
 						</div>
+						<div class="col-md-6">
+							@*<label>Last Name <span class="red-txt">*</span></label>*@
+							@*<input id="LastName" class="form-control" type="password" placeholder="">*@
+							@Html.LabelFor(m => m.LastName, new { @class = "requiredA" })
+							@Html.TextBoxFor(m => m.LastName, new { @class = "form-control" })
+							@Html.ValidationMessageFor(m => m.LastName, "", new { @class = "text-danger" })
+						</div>
+					</div>
 
-						<div class="row">
-							<div class="col-md-6">
-								@*<label>Date of Birth <span class="red-txt">*</span></label>*@
-								@*<input id="DateofBirth" class="form-control" type="password" placeholder="22/08/2018">*@
-								@Html.LabelFor(m => m.DOB, new { @class = "requiredA" })
+					<div class="row">
+						<div class="col-md-6">
+							@*<label>Date of Birth <span class="red-txt">*</span></label>*@
+							@*<input id="DateofBirth" class="form-control" type="password" placeholder="22/08/2018">*@
+							@*@Html.LabelFor(m => m.DOB, new { @class = "requiredA" })
 								@Html.TextBoxFor(m => m.DOB, "{0:yyyy-MM-dd}", new { @class = "form-control" })
-								@Html.ValidationMessageFor(m => m.DOB, "", new { @class = "text-danger" })
+								@Html.ValidationMessageFor(m => m.DOB, "", new { @class = "text-danger" })*@
+							@Html.LabelFor(m => m.DOB, new { @class = "requiredA" })
+							<div class="input-group date">
+								@Html.TextBoxFor(m => m.DOB, "{0:d}", new { @class = "datepicker form-control", @type = "text", @Name = "DOB", @value = "" })
+								<div class="input-group-addon"><span class="glyphicon glyphicon-th"></span></div>
 							</div>
-							<div class="col-md-6">
-								@*<label>Gender <span class="red-txt">*</span></label>*@
-								@Html.LabelFor(m => m.GenderData, new { @class = "requiredA" })
-								@Html.DropDownList("GenderData", new SelectList(ViewBag.Gender, "Id", "Name", ViewBag.SelectedGender), "Select", new { @class = "form-control"})
-								@Html.ValidationMessageFor(m => m.GenderData, "", new { @class = "text-danger" })
-							</div>
-							<div class="col-md-6">
-
-								@Html.LabelFor(m => m.AgeGroupData)
-								@*@Html.DropDownListFor(m => m.AgeGroupId, new SelectList(ViewBag.AgeGroupId, "Id", "Name", ViewBag.SelectedAgeGroupId), "Select", new { style = "width: 150px" })*@
-								@Html.DropDownListFor(m => m.AgeGroupData, new SelectList(ViewBag.AgeGroup, "Id", "Name", ViewBag.SelectedAgeGroup), "Select", new { @class = "form-control" })
-								@Html.ValidationMessageFor(m => m.AgeGroupData, "", new { @class = "text-danger" })
-							</div>
-
+							@Html.ValidationMessageFor(m => m.DOB)
+							@Html.HiddenFor(m => m.DOB, new { Id = "DateValue" })
 						</div>
-						<div class="row">
-							<div class="col-md-12">
+						<div class="col-md-6">
+							@*<label>Gender <span class="red-txt">*</span></label>*@
+							@Html.LabelFor(m => m.GenderData, new { @class = "requiredA" })
+							@Html.DropDownList("GenderData", new SelectList(ViewBag.Gender, "Id", "Name", ViewBag.SelectedGender), "Select", new { @class = "form-control" })
+							@Html.ValidationMessageFor(m => m.GenderData, "", new { @class = "text-danger" })
+						</div>
+						<div class="col-md-6">
 
-								@*<input class="btn btn-orange float-right" type="submit" name="BtnNext" value="Continue" />*@
-		<button class="btn btn-secondary float-left" id="btnCancel" type="button" onclick="window.location = '@Url.Action("Login", "Account")'">Cancel <i class="material-icons">cancel</i></button>
-		<button class="btn btn-orange float-right" name="BtnNext" type="submit" data-target="#demo" data-toggle="collapse">Continue <i class="material-icons">check_circle</i></button>
-							</div>
+							@Html.LabelFor(m => m.AgeGroupData)
+							@*@Html.DropDownListFor(m => m.AgeGroupId, new SelectList(ViewBag.AgeGroupId, "Id", "Name", ViewBag.SelectedAgeGroupId), "Select", new { style = "width: 150px" })*@
+							@Html.DropDownListFor(m => m.AgeGroupData, new SelectList(ViewBag.AgeGroup, "Id", "Name", ViewBag.SelectedAgeGroup), "Select", new { @class = "form-control" })
+							@Html.ValidationMessageFor(m => m.AgeGroupData, "", new { @class = "text-danger" })
+						</div>
+
+					</div>
+					<div class="row">
+						<div class="col-md-12">
+
+							@*<input class="btn btn-orange float-right" type="submit" name="BtnNext" value="Continue" />*@
+							<button class="btn btn-secondary float-left" id="btnCancel" type="button" onclick="window.location = '@Url.Action("Login", "Account")'">Cancel <i class="material-icons">cancel</i></button>
+							<button class="btn btn-orange float-right" name="BtnNext" type="submit" data-target="#demo" data-toggle="collapse">Continue <i class="material-icons">check_circle</i></button>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
+	</div>
 
-	}
+}
 @section Scripts {
 	<script type="text/javascript">
 		$(document).ready(function () {
-			$("#DOB").datepicker({ maxDate: '0' });
+			//$("#DOB").datepicker({ maxDate: '0' });
+			$('.datepicker').datepicker({
+				todayHighlight: true,
+				autoclose: true,
+				defaultDate: false,
+				dateFormat: 'mm-dd-yyyy',
+				setDate: null
+			});
 		});
-		
+
 
 	</script>
 }
